--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
           <a class="link link-logo" href="./index.html">Web<span class="logo-studio">Studio</span> </a>
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="link site-nav-link">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link site-nav-link current">Portfolio</a>
             </li>
             <li class="item">
-              <a href="" class="link">Contacts</a>
+              <a href="" class="link site-nav-link">Contacts</a>
             </li>
           </ul>
         </nav>
