--- a/index.html
+++ b/index.html
@@ -393,5 +393,16 @@
         </div>
       </div>
     </footer>
+
+    <!-- modal -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
