--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,12 @@
          <ul class=" list links cards">
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-1.jpg" alt="Banking App Interface Concept" width="360" />
+                  <div class="card-thumb">
+                    <img class="img img-card" src="./images/portfolio-img/img-1.jpg" alt="Banking App Interface Concept" width="360" />
+                    <div class="overlay">
+                      <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                  </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Banking App Interface Concept</h2>
                     <p class="link-text">App</p>
@@ -73,7 +78,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-2.jpg" alt="Cashless Payment" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-2.jpg" alt="Cashless Payment" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Cashless Payment</h2>
                     <p class="link-text">Marketing</p>
@@ -82,7 +87,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-3.jpg" alt="Meditation App" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-3.jpg" alt="Meditation App" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Meditation App</h2>
                     <p class="link-text">App</p>
@@ -91,7 +96,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-4.jpg" alt="Taxi Service" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-4.jpg" alt="Taxi Service" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Taxi Service</h2>
                     <p class="link-text">Marketing</p>
@@ -100,7 +105,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-5.jpg" alt="Screen Illustrations" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-5.jpg" alt="Screen Illustrations" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Screen Illustrations</h2>
                     <p class="link-text">Design</p>
@@ -109,7 +114,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-6.jpg" alt="Online Courses" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-6.jpg" alt="Online Courses" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Online Courses</h2>
                     <p class="link-text">Marketing</p>
@@ -118,7 +123,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-7.jpg" alt="Instagram Stories Concept" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-7.jpg" alt="Instagram Stories Concept" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Instagram Stories Concept</h2>
                     <p class="link-text">Design</p>
@@ -127,7 +132,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-8.jpg" alt="Organic Food" width="360" />
+                  <img class="img img-card " src="./images/portfolio-img/img-8.jpg" alt="Organic Food" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Organic Food</h2>
                     <p class="link-text">Web Site</p>
@@ -136,7 +141,7 @@
               </li>
               <li class="link card">
                 <a class="link" href="">
-                  <img class="img" src="./images/portfolio-img/img-9.jpg" alt="Fresh Coffee" width="360" />
+                  <img class="img img-card" src="./images/portfolio-img/img-9.jpg" alt="Fresh Coffee" width="360" />
                   <div class="card-tittle">
                     <h2 class="link-title">Fresh Coffee</h2>
                     <p class="link-text">Web Site</p>
