--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="hero">
         <div class=" container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="button button-active">Order Service</button>
+          <button type="button" class="button button-active" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -395,14 +395,15 @@
     </footer>
 
     <!-- modal -->
-    <div class="backdrop">
-      <div class="modal">
-        <button class="modal-close-btn">
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#close-black"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
+     <div class="backdrop" data-modal>
+       <div class="modal">
+         <button class="modal-close-btn" data-modal-close>
+           <svg class="modal-close-icon" width="8" height="8">
+             <use href="./images/icons.svg#close-black"></use>
+           </svg>
+         </button>
+       </div>
+     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
