--- a/portfolio.html
+++ b/portfolio.html
@@ -62,13 +62,13 @@
             </li>
           </ul>
          <ul class=" list links cards">
-              <li class="link card">
-                <a class="link" href="">
+              <li class="link card link-card">
+                <a class="link " href="">
                   <div class="card-thumb">
                     <img class="img img-card" src="./images/portfolio-img/img-1.jpg" alt="Banking App Interface Concept" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                       <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
+                    <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Banking App Interface Concept</h2>
@@ -76,13 +76,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb ">
                     <img class="img img-card " src="./images/portfolio-img/img-2.jpg" alt="Cashless Payment" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Cashless Payment</h2>
@@ -90,13 +90,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-3.jpg" alt="Meditation App" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Meditation App</h2>
@@ -104,13 +104,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-4.jpg" alt="Taxi Service" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Taxi Service</h2>
@@ -118,13 +118,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-5.jpg" alt="Screen Illustrations" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Screen Illustrations</h2>
@@ -132,13 +132,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-6.jpg" alt="Online Courses" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Online Courses</h2>
@@ -146,13 +146,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-7.jpg" alt="Instagram Stories Concept" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Instagram Stories Concept</h2>
@@ -160,13 +160,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card " src="./images/portfolio-img/img-8.jpg" alt="Organic Food" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Organic Food</h2>
@@ -174,13 +174,13 @@
                   </div>
                 </a>
               </li>
-              <li class="link card">
+              <li class="link card link-card">
                 <a class="link" href="">
                   <div class="card-thumb">
                     <img class="img img-card" src="./images/portfolio-img/img-9.jpg" alt="Fresh Coffee" width="360" />
-                    <div class="overlay">
+                    <!-- <div class="overlay"> -->
                         <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
+                      <!-- </div> -->
                   </div>
                   <div class="card-tittle">
                     <h2 class="link-title">Fresh Coffee</h2>
