--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="hero">
         <div class=" container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button button-active" data-modal-open>Order Service</button>
+          <button type="button" class="hero-button-active" data-modal-open>Order Service</button>
         </div>
       </section>
 
