--- a/portfolio.html
+++ b/portfolio.html
@@ -46,19 +46,19 @@
         <h1 class="visually-hidden">filters</h1>
          <ul class="list filters">
             <li class="item">
-              <button type="button" class="filter-button button-active">All</button>
+              <button type="button" class="filter-button">All</button>
             </li>
             <li class="item">
-              <button type="button" class="filter-button button-active">Web Site</button>
+              <button type="button" class="filter-button">Web Site</button>
             </li>
             <li class="item">
-              <button type="button" class="filter-button button-active">App</button>
+              <button type="button" class="filter-button">App</button>
             </li>
             <li class="item">
-              <button type="button" class="filter-button button-active">Design</button>
+              <button type="button" class="filter-button">Design</button>
             </li>
             <li class="item">
-              <button type="button" class="filter-button button-active">Marketing</button>
+              <button type="button" class="filter-button">Marketing</button>
             </li>
           </ul>
          <ul class=" list links cards">
